--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,6 @@ httpx==0.27.0
 huggingface-hub==0.23.3
 idna==3.7
 importlib_metadata==7.1.0
-install==1.3.5
 interegular==0.3.3
 ipykernel==6.29.4
 ipython==8.25.0
@@ -106,6 +105,7 @@ pydantic==2.7.4
 pydantic_core==2.18.4
 Pygments==2.18.0
 pyparsing==3.1.2
+pypi-install==1.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
